Change TxtGenerator to java BufferedImage